[gd_scene load_steps=3 format=3 uid="uid://dwsjq4q12xh8r"]

[ext_resource type="Script" path="res://2d/source/scripts/builder/next_event.gd" id="1"]
[ext_resource type="Theme" uid="uid://c6r0evvw6xarl" path="res://2d/assets/themes/transparent_borders.tres" id="2"]

[node name="NextEvent" type="ScrollContainer"]
offset_top = 480.0
offset_right = 1024.0
offset_bottom = 576.0
mouse_filter = 2
theme = ExtResource("2")
script = ExtResource("1")

[node name="Grid" type="GridContainer" parent="."]
custom_minimum_size = Vector2(200, 40)
layout_mode = 2
columns = 2

[node name="MarginLabel" type="Label" parent="Grid"]
custom_minimum_size = Vector2(222, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0.666667, 0, 1)

[node name="LabelDescription2" type="Label" parent="Grid"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0.666667, 0, 1)
text = " Next Event number is the same value as this scene's event number."

[node name="DungeonNumber" type="Label" parent="Grid"]
layout_mode = 2
focus_previous = NodePath("../../../ToTitle")
text = "Dungeon."
horizontal_alignment = 2

[node name="Grid1" type="HBoxContainer" parent="Grid"]
layout_mode = 2

[node name="DungeonNumberSpinbox" type="SpinBox" parent="Grid/Grid1"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
min_value = 1.0
max_value = 8.0
page = 1.0
value = 1.0

[node name="LabelDescription5" type="Label" parent="Grid/Grid1"]
layout_mode = 2
mouse_filter = 1
text = " The dungeon number of the next event / sub event."

[node name="LevelNumberLable" type="Label" parent="Grid"]
layout_mode = 2
focus_previous = NodePath("../../../ToTitle")
text = "Level."
horizontal_alignment = 2

[node name="Grid2" type="HBoxContainer" parent="Grid"]
layout_mode = 2

[node name="LevelNumberSpinbox" type="SpinBox" parent="Grid/Grid2"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
min_value = 1.0
page = 1.0
value = 1.0

[node name="LabelDescription" type="Label" parent="Grid/Grid2"]
layout_mode = 2
mouse_filter = 1
text = " The level number of the next event / sub event."

[node name="Label" type="Label" parent="Grid"]
layout_mode = 2
text = "Select Next Event or finalize."
horizontal_alignment = 2
autowrap_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Grid"]
layout_mode = 2

[node name="ItemList" type="ItemList" parent="Grid/HBoxContainer"]
custom_minimum_size = Vector2(230, 100)
layout_mode = 2
allow_reselect = true
item_count = 7
item_0/text = "- End Event"
item_1/text = "- Give Reward"
item_2/text = "Event Story"
item_3/text = "Event Locked Doors"
item_4/text = "Puzzles"
item_5/text = "Hunting Tasks"
item_6/text = "Inventory"

[node name="Label" type="Label" parent="Grid/HBoxContainer"]
custom_minimum_size = Vector2(540, 0)
layout_mode = 2
text = "  Select what do to after player completes this scene. Next event level number and dungeon number wil be ignored when selecting an item with a minus symbol in front of it (finalizing)."

[node name="EmptyLabel" type="Label" parent="Grid"]
layout_mode = 2

[node name="Label2" type="Label" parent="Grid"]
layout_mode = 2

[connection signal="value_changed" from="Grid/Grid1/DungeonNumberSpinbox" to="." method="_on_dungeon_number_Spinbox_value_changed"]
[connection signal="value_changed" from="Grid/Grid2/LevelNumberSpinbox" to="." method="_on_level_number_Spinbox_value_changed"]
[connection signal="item_selected" from="Grid/HBoxContainer/ItemList" to="." method="_on_ItemList_item_selected"]
